--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Python ${{ github.python-release-version }}
+      - name: Setup Python ${{ github.python_release_version }}
         uses: actions/setup-python@v4
         with:
-            python-version: ${{ github.python-release-version }}
+            python-version: ${{ github.python_release_version }}
       - name: Install build tools
         shell: bash
         run: |
@@ -33,32 +33,36 @@ jobs:
         id: check_version
         shell: bash
         run: |
-          python -c "
-          import subprocess
-          import tomllib
+            python -c "
+            import subprocess
+            import tomllib
 
-          vparse = lambda x: tuple(map(int, x.split(".")))
+            vparse = lambda x: tuple(map(int, x.split(".")))
 
-          with open("pyproject.toml", "rb") as fd:
-              pyproject = tomllib.load(fd)["project"]
+            with open("pyproject.toml", "rb") as fd:
+                pyproject = tomllib.load(fd)["project"]
 
-          project_name = pyproject["name"]
-          project_version = pyproject["version"]
-          pypi_version = subprocess.run(
-              f"python -m pip index versions {project_name}", shell=True, capture_output=True
-          ).stdout
-          pypi_version = pypi_version.split(b"\n", 1)[0].split(b" ")[1][1:-1].decode("utf-8")
-          new_version = str(vparse(project_version) > vparse(pypi_version)).lower()
+            project_name = pyproject["name"]
+            project_version = pyproject["version"]
+            pypi_version = subprocess.run(
+                f"python -m pip index versions {project_name}", shell=True, capture_output=True
+            ).stdout
+            try:
+                pypi_version = pypi_version.split(b"\n", 1)[0].split(b" ")[1][1:-1].decode("utf-8")
+            except IndexError:
+                # If there exists no current pypi version
+                pypi_version = "0.0.0"
+            new_version = str(vparse(project_version) > vparse(pypi_version)).lower()
 
-          subprocess.run(f"echo name={project_name} >> $GITHUB_OUTPUT", shell=True)
-          subprocess.run(f"echo tag=v{project_version} >> $GITHUB_OUTPUT", shell=True)
-          subprocess.run(f"echo new-version={new_version} >> $GITHUB_OUTPUT", shell=True)
-          print(f"Got checkout_version={vparse(project_version)!r}")
-          print(f"Got pypi_version={vparse(pypi_version)!r}")
-          print(f"Setting name={project_name}")
-          print(f"Setting tag=v{project_version}")
-          print(f"Setting new-version={new_version}")
-          "
+            subprocess.run(f"echo name={project_name} >> $GITHUB_OUTPUT", shell=True)
+            subprocess.run(f"echo tag=v{project_version} >> $GITHUB_OUTPUT", shell=True)
+            subprocess.run(f"echo new-version={new_version} >> $GITHUB_OUTPUT", shell=True)
+            print(f"Got checkout_version={vparse(project_version)!r}")
+            print(f"Got pypi_version={vparse(pypi_version)!r}")
+            print(f"Setting name={project_name}")
+            print(f"Setting tag=v{project_version}")
+            print(f"Setting new-version={new_version}")
+            "
 
       - name: Publish package distributions to PyPI
         if: (steps.check_version.outputs.new-version == 'true')
