--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
             python -m pip install --upgrade pip
             python -m pip install build
             python -m build
-      - name: Check version in pyproject.toml and __version__
+      - name: Check version in pyproject.toml
         id: check_version
         shell: bash
         run: |
