--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Python ${{ github.python_release_version }}
+      - name: Setup Python 3.11
         uses: actions/setup-python@v4
         with:
-            python-version: ${{ github.python_release_version }}
+            python-version: "3.11"
       - name: Install build tools
         shell: bash
         run: |
