--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,14 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.9
+    rev: v0.1.14
     hooks:
       - id: ruff
         types_or: [ python, pyi, jupyter ]
         args: [ --fix ]
       - id: ruff-format
         types_or: [ python, pyi, jupyter ]
-  # TODO: Enable in next release.
-  # - repo: https://github.com/RobertCraigie/pyright-python
-  #   rev: v1.1.342
-  #   hooks:
-  #   - id: pyright
-  #     additional_dependencies: [equinox, diffrax, jax, jaxtyping, pytest]
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.348
+    hooks:
+    - id: pyright
+      additional_dependencies: [equinox, diffrax, scikit-learn, jax, jaxtyping, pytest]
