--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -1,5 +1,6 @@
 mccube
-furo==2023.9.10
-sphinx==7.2.6
-sphinx-math-dollar==1.2.1
-sphinxcontrib-bibtex==2.6.1
+mkdocs==1.5.3
+mkdocs-material==9.5.4
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.24.0
+mkdocstrings-python==1.8.0
