--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,6 @@ dependencies = [
     "diffrax>=0.5.0",
     "equinox>=0.11.2",
     "jax>=0.4.23",
-    "jaxlib>=0.4.23",
     "jaxtyping>=0.2.25",
     "scikit-learn>=1.3.2"
 ]
@@ -39,14 +38,14 @@ repository = "https://github.com/tttc3/mccube"
 
 [project.optional-dependencies]
 test = [
-    "pytest",
-    "beartype"
+    "beartype",
+    "jaxlib",
+    "pytest"
 ]
 
 dev = [
     "mccube[test]",
-    "jupytext",
-    "pre-commit"
+    "pre-commit",
 ]
 
 [build-system]
