--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,16 +1,11 @@
-# Based on https://github.com/patrick-kidger/equinox/blob/41fd6a7fa958453faea3bb66e20e3f5d7f57473b/.github/workflows/run_tests.yml
-name: Tests
+name: Run tests
 
 on:
-  push:
-    branches:
-      main
   pull_request:
-    branches:
-      main
+  workflow_dispatch:
 
 jobs:
-  run-test:
+  run-tests:
     strategy:
       matrix:
         python-version: [ 3.12 ]
@@ -26,14 +21,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install ".[dev]"
-
       - name: Checks with pre-commit
         uses: pre-commit/action@v2.0.3
 
       - name: Test with pytest
         run: |
-          python -m pytest
+          python -m pip install --upgrade pip
+          python -m pip install ".[test]"
+          python -m test
