--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,27 @@ on:
   pull_request:
 
 jobs:
-  test:
-    uses: tttc3/actions@main
-    with:
-      release: false
+  run-tests:
+    strategy:
+      matrix:
+        python-version: [ 3.12 ]
+        os: [ ubuntu-latest, windows-latest ]
+      fail-fast: false
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Checks with pre-commit
+        uses: pre-commit/action@v2.0.3
+
+      - name: Test with pytest
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install ".[test]"
+          python -m test
