--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,15 +9,11 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
-    # You can also specify other tool versions:
-    # nodejs: "19"
-    # rust: "1.64"
-    # golang: "1.19"
+    python: "3.12"
 
-# Build documentation in the "docs/" directory with Sphinx
-sphinx:
-   configuration: docs/conf.py
+mkdocs:
+  configuration: mkdocs.yaml
+
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
