--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [project]
 name = "mccube"
 version = "0.0.3"
-authors = [{name = "The MCCube team", email = "T.Coxon2@lboro.ac.uk"}]
 description = "Markov chain cubature via JAX."
+readme = "README.md"
+license = {file = "LICENSE"}
+authors = [{name = "The MCCube team", email = "T.Coxon2@lboro.ac.uk"}]
 keywords = [
     "sampling",
     "probability",
@@ -16,12 +18,12 @@ classifiers = [
     "Intended Audience :: Financial and Insurance Industry",
     "Intended Audience :: Information Technology",
     "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Scientific/Engineering :: Mathematics",
 ]
-readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "diffrax>=0.5.0",
