--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
             test-script: |
                 cp -r ${{ github.workspace }}/tests ./tests
                 cp ${{ github.workspace }}/pyproject.toml ./pyproject.toml
-                python -m pip install ".[test]"
+                python -m pip install "mccube[test]"
                 pytest
             pypi-token: ${{ secrets.pypi_token }}
             github-user: tttc3
