Implemented closed-form gaussian metrics.

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -98,6 +98,7 @@ plugins:
             separate_signature: true
             show_signature_annotations: true
             signature_crossrefs: true
+            line_length: 70
             summary: true
 
 nav:
