--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requires-python = ">=3.12"
 dependencies = [
     "diffrax>=0.5.0",
     "equinox>=0.11.2",
+    "linear>=0.0.4",
     "jax>=0.4.23",
     "jaxtyping>=0.2.25",
     "scikit-learn>=1.3.2"
