--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,14 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Scientific/Engineering :: Mathematics",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 dependencies = [
     "diffrax>=0.5.0",
     "equinox>=0.11.2",
     "jax>=0.4.23",
     "jaxtyping>=0.2.25",
-    "scikit-learn>=1.3.2"
+    "scikit-learn>=1.3.2",
+    "typing_extensions>=4.9.0"
 ]
 
 [project.urls]
@@ -70,6 +71,7 @@ ignore = ["F722"]
 
 [tool.ruff.isort]
 combine-as-imports = true
+extra-standard-library = ["typing_extensions"]
 order-by-type = false
 
 [tool.pyright]
