--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        python-version: [ 3.12 ]
+        python-version: [ "3.10", "3.12" ]
         os: [ ubuntu-latest, windows-latest ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
@@ -26,7 +26,7 @@ jobs:
           python -m pip install -r ./tests/requirements-test.txt
           
       - name: Checks with pre-commit
-        uses: pre-commit/action@v3
+        uses: pre-commit/action@v3.0.0
 
       - name: Test with pytest
         run: |
