--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ name = "mccube"
 version = "0.0.3"
 description = "Markov chain cubature via JAX."
 readme = "README.md"
-license = {file = "LICENSE"}
-authors = [{name = "The MCCube team", email = "T.Coxon2@lboro.ac.uk"}]
+license = { file = "LICENSE" }
+authors = [{ name = "The MCCube team", email = "T.Coxon2@lboro.ac.uk" }]
 keywords = [
     "sampling",
     "probability",
@@ -24,14 +24,14 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Scientific/Engineering :: Mathematics",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "diffrax>=0.5.0",
     "equinox>=0.11.2",
     "jax>=0.4.23",
     "jaxtyping>=0.2.25",
     "scikit-learn>=1.3.2",
-    "typing_extensions>=4.9.0"
+    "typing_extensions>=4.9.0",
 ]
 
 [project.urls]
@@ -40,16 +40,9 @@ documentation = "https://mccube.readthedocs.io"
 repository = "https://github.com/tttc3/mccube"
 
 [project.optional-dependencies]
-test = [
-    "beartype",
-    "pytest",
-    "jaxlib"
-]
+test = ["beartype", "pytest", "pytest-cov", "jaxlib"]
 
-dev = [
-    "mccube[test]",
-    "pre-commit",
-]
+dev = ["mccube[test]", "pre-commit"]
 
 [build-system]
 requires = ["hatchling"]
@@ -59,7 +52,10 @@ build-backend = "hatchling.build"
 include = ["mccube/*"]
 
 [tool.pytest.ini_options]
-addopts = "--jaxtyping-packages=mccube,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
+addopts = """
+    --jaxtyping-packages=mccube,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On)) \
+    --cov=mccube --cov-report term-missing
+    """
 
 [tool.jupytext]
 formats = "ipynb, md"
@@ -69,8 +65,11 @@ extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
 fixable = ["I001", "F401"]
-ignore = ["F722"]
-select = ["I001", "PT"]
+ignore = ["ANN101", "ANN204", "ARG005", "F722", "E501"]
+select = ["ANN", "ARG", "B", "E", "EM", "F", "S", "I001", "PT", "W"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["ANN", "S101"]
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
@@ -78,5 +77,6 @@ extra-standard-library = ["typing_extensions"]
 order-by-type = false
 
 [tool.pyright]
-typeCheckingMode = "standard"
+reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar
+reportUnnecessaryTypeIgnoreComment = true
 include = ["mccube", "tests"]
